# zigcli-rs

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: main.yml
src/: build.rs  lib.rs
test-crate/: Cargo.toml  build.rs
test-crate/src/: lib.rs
test-crate/zig_package/: build.zig  build.zig.zon
